added postgres connection interface
